<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".NovaBiljkaActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/naslov"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mint_green"
            android:gravity="center"
            android:text="Unos nove biljke"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/sview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="135dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Naziv biljke: "
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/nazivET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="135dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Porodica: "
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/porodicaET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="135dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Medicinsko upozorenje: "
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/medicinskoUpozorenjeET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Medicinske koristi: "
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/medicinskaKoristLV"
                        android:layout_width="match_parent"
                        android:layout_height="195dp"
                        android:choiceMode="multipleChoice"
                        android:nestedScrollingEnabled="true" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp"
                tools:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Klimatski tipovi:"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/klimatskiTipLV"
                        android:layout_width="match_parent"
                        android:layout_height="195dp"
                        android:choiceMode="multipleChoice"
                        android:nestedScrollingEnabled="true">

                    </ListView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Zemljišni tipovi: "
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/zemljisniTipLV"
                        android:layout_width="match_parent"
                        android:layout_height="195dp"
                        android:choiceMode="multipleChoice"
                        android:nestedScrollingEnabled="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Profil okusa:"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/profilOkusaLV"
                        android:layout_width="match_parent"
                        android:layout_height="195dp"
                        android:choiceMode="singleChoice"
                        android:nestedScrollingEnabled="true" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="117dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Jelo:  "
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/jeloET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/dodajJeloBtn"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="Dodaj jelo"
                        app:cornerRadius="5dp" />

                    <ListView
                        android:id="@+id/jelaLV"
                        android:layout_width="match_parent"
                        android:layout_height="195dp"
                        android:nestedScrollingEnabled="true" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/yellow_card"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/slikaIV"
                        android:layout_width="179dp"
                        android:layout_height="142dp" />

                    <Button
                        android:id="@+id/uslikajBiljkuBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="43dp"
                        android:text="Uslikaj biljku"
                        app:cornerRadius="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dodaj biljku"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
